--- a/index.html
+++ b/index.html
@@ -1,1 +1,93 @@
-hello world
+<!DOCTYPE html>
+<!--
+    Plain-Academic by Vasilios Mavroudis
+    Released under the  Simplified BSD License/FreeBSD (2-clause) License.
+    https://github.com/mavroudisv/plain-academic
+-->
+
+<html lang="en">
+<head>
+  <title>Huy Pham</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Inter:700' rel='stylesheet' type='text/css'>
+</head>
+<body>
+
+
+<!-- Navigation -->
+    <nav class="navbar navbar-inverse style="margin-left: 100px;"">
+      <div class="container">
+		<ul class="nav navbar-nav">
+              <li><a href="#">Home</a></li>
+              <li><a href="#publications">Publications</a></li> 
+              <li><a href="#teaching">Teaching</a></li> 
+		</ul>
+	  </div>
+	</nav>
+  <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+            <!-- Contact Info on the Sidebar -->
+            <div class="col-md-3 col-xs-12">
+                <div style="word-wrap: break-word; font-family: 'Inter', sans-serif; font-size: 32px;"><b>Huy Pham</b></div><br>
+                <div> <p>(he/him)<br> </div>
+                <div class="row"> <div class="col-md-10 col-xs-4"> <img class="img-responsive" src="assets/img/avatar.jpg" alt=""></div></div><br>
+                <div> <p>Email: hgp at berkeley dot edu<br> </div>
+                <div> <p> <a href=""https://scholar.google.com/citations?user=ctDTlKsAAAAJ&hl=en&oi=sra>google scholar</a><br> </div>
+                <div> <p> <a href="https://github.com/hgp297">github repo</a><br> </div>
+            </div>
+            <!-- Entries Column -->
+            <div class="col-md-8 col-xs-12">
+                <div class="col" style="margin-top:3%; text-align:justify;">                
+					<p>Hi!</p>
+                    <p>
+					I'm a Ph.D Candidate at UC Berkeley studying the application of machine learning models in performance-based design in structural engineering, particularly in base isolated structures. I'm currently finishing my Ph.D program, advised by Prof. Tracy Becker, with a <a href=https://github.com/hgp297/isol-sys-database/>project</a> that focuses on using Gaussian process to enable inverse design of isolated steel frames to achieve resiliency targets. 
+                    </p>
+                   <p> 
+                   I am interested in the application of ML methods and data-driven methods to complement disaster decision making, especially on the regional scale. Particularly, this includes <b>regional resiliency prediction</b>, <b>fairness criteria in risk prediction models</b>, and optimization in disaster damage mitigation or response strategies. My Ph.D work was funded by the NSF Graduate Research Fellowship, along with UC Berkeley's Graduate Fellowship.
+                   </p>
+				   <p>
+				   Prior to this, I did my undergrad at UT Austin, where I worked on design and testing of optimized ducted marine turbine with the Ocean Engineering Group under Dr. Spyros Kinnas. I also greatly enjoy teaching and STEM outreach. I have been a teaching assistant for 3 semesters and have done high school outreach with Cal's Earthquake Engineering Research Institute under the <a href=https://www.eeri.org/schools>SESI</a> program for three years.
+				   </p>
+				   <p>
+				   Outside of research work, I enjoy board games, hiking, tennis, and learning languages.
+				   </p>
+                </div> 
+                <div class="row">
+  <div class="column"></div>
+  <div class="column"></div>
+</div> 
+            <div class="col">    
+                <h2 id="publications">Publications</h2>
+				<p><strong>H. G. Pham</strong>, T. C. Becker. Decision Variable-based Inverse Design of Isolated Steel Frames using Gaussian Process Regression. <em>Engineering Mechanics Institute Conference and Probabilistic Mechanics & Reliability Conference (EMI/PMC 2024)</em> Chicago, Illinois, USA.</p>
+                <p>
+                <b> <a href="https://arxiv.org/abs/2401.06416">Mission: Impossible Language Models</a></b> - Julie Kalini, <b> Isabel Papadimitriou </b>, Richard Futrell, Kyle Mahowald, and Christopher Potts (preprint)
+                </p>
+                <p></p>
+
+            </div>
+            <div class="col">    
+                <h2 id="teaching">Teaching</h2>
+				<ul>
+              <li><b>Fall 2024 &mdash;</b> <i>Graduate Student Instructor</i>, CE 122: Design of Steel Structures @ UC Berkeley, taught by Tracy Becker</li>
+              <li> <b>Spring 2023 &mdash;</b> <i>Graduate Student Instructor</i>, CE 227: Earthquake Resistant Design @ UC Berkeley, taught by Tracy Becker</li>
+              <li> <b>Fall 2023 &mdash; </b> <i>Graduate Student Instructor</i>, CE 225: Dynamics of Structures @ UC Berkeley, taught by Matthew DeJong </li>
+              <li><b>Fall 2018 &mdash; </b> <i>Undergraduate Teaching Assistant</i>, CE 319F: Elementary Mechanics of Fluids @ UT Austin, taught by Spyros Kinnas</li>
+            </ul>
+            </div>
+        </div>
+                </div>
+    </div>
+    </div>
+    
+    <!-- Other people may like it too! -->
+    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">The template is by Vasilios Mavroudis. Thanks!</a> 
+    
+</body>
+
+</html>
+
