--- a/index.html
+++ b/index.html
@@ -63,9 +63,18 @@
 </div> 
             <div class="col">    
                 <h2 id="publications">Publications</h2>
-				<p><strong>H. G. Pham</strong>, T. C. Becker. Decision Variable-based Inverse Design of Isolated Steel Frames using Gaussian Process Regression. <em>Engineering Mechanics Institute Conference and Probabilistic Mechanics & Reliability Conference (EMI/PMC 2024)</em> Chicago, Illinois, USA.</p>
+				<p><strong>H. G. Pham</strong>, and T. C. Becker (2024). Design of Isolated Building to Achieve Targeted Collapse Limits through Gaussian Process Modeling. <em>Engineering Structures</em>. [in review]</p>
+				<p></p>
+				<p><strong>H. Pham</strong>, and T. Becker (2024). Decision Variable-based Inverse Design of Isolated Steel Frames using Gaussian Process Regression. <em>Engineering Mechanics Institute Conference and Probabilistic Mechanics & Reliability Conference (EMI/PMC 2024)</em>. Chicago, Illinois, USA.</p>
                 <p>
                 <p></p>
+				<p><strong>H. G. Pham</strong>, and T. C. Becker (2023). Inverse Design of Isolated Structures using Predicted FEMA P-58 Decision Variables. <em>8th International Symposium of Life-Cycle Civil Engineering</em>. Milan, Italy.</p>
+				<p></p>
+				<p>T. C. Becker, and <strong>H. Pham</strong> (2022). Inverse design of isolated buildings given desired collapse probability via surrogate model. <em>The 3rd International Conference on Natural Hazards & Infrastructure</em>. Athens, Greece.</p>
+				<p></p>
+				<p>T. C. Becker, and <strong>H. Pham</strong> (2020). Prediction of Bearing Failure with Surrogate Modeling. <em>17th World Conference on Earthquake Engineering</em>. Sendai, Japan.</p>
+				<p>W. Du, <strong>H. Pham</strong>, and S. A. Kinnas (2019). Design by optimization and flume test of ducted horizontal axis marine current turbines. <em>The 29th International Ocean and Polar Engineering Conference</em>. OnePetro.</p>
+				<p></p
 
             </div>
             <div class="col">    
