--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               <li><a href="#">Home</a></li>
               <li><a href="#publications">Publications</a></li> 
               <li><a href="#teaching">Teaching</a></li> 
+              <li><a href="./assets/files/cv.pdf" target="_blank">CV</a></li> 
 		</ul>
 	  </div>
 	</nav>
@@ -68,12 +69,12 @@
 				<p><strong>H. Pham</strong>, and T. Becker (2024). Decision Variable-based Inverse Design of Isolated Steel Frames using Gaussian Process Regression. <em>Engineering Mechanics Institute Conference and Probabilistic Mechanics & Reliability Conference (EMI/PMC 2024)</em>. Chicago, Illinois, USA.</p>
                 <p>
                 <p></p>
-				<p><strong>H. G. Pham</strong>, and T. C. Becker (2023). Inverse Design of Isolated Structures using Predicted FEMA P-58 Decision Variables. <em>8th International Symposium of Life-Cycle Civil Engineering</em>. Milan, Italy.</p>
+				<p><strong>H. G. Pham</strong>, and T. C. Becker (2023). Inverse Design of Isolated Structures using Predicted FEMA P-58 Decision Variables. <em>8th International Symposium of Life-Cycle Civil Engineering (IALCCE 2023)</em>. Milan, Italy.</p>
 				<p></p>
-				<p>T. C. Becker, and <strong>H. Pham</strong> (2022). Inverse design of isolated buildings given desired collapse probability via surrogate model. <em>The 3rd International Conference on Natural Hazards & Infrastructure</em>. Athens, Greece.</p>
+				<p>T. C. Becker, and <strong>H. Pham</strong> (2022). Inverse design of isolated buildings given desired collapse probability via surrogate model. <em>The 3rd International Conference on Natural Hazards & Infrastructure (ICONHIC 2022)</em>. Athens, Greece.</p>
 				<p></p>
-				<p>T. C. Becker, and <strong>H. Pham</strong> (2020). Prediction of Bearing Failure with Surrogate Modeling. <em>17th World Conference on Earthquake Engineering</em>. Sendai, Japan.</p>
-				<p>W. Du, <strong>H. Pham</strong>, and S. A. Kinnas (2019). Design by optimization and flume test of ducted horizontal axis marine current turbines. <em>The 29th International Ocean and Polar Engineering Conference</em>. OnePetro.</p>
+				<p>T. C. Becker, and <strong>H. Pham</strong> (2020). Prediction of Bearing Failure with Surrogate Modeling. <em>17th World Conference on Earthquake Engineering (17WCEE)</em>. Sendai, Japan.</p>
+				<p>W. Du, <strong>H. Pham</strong>, and S. A. Kinnas (2019). Design by optimization and flume test of ducted horizontal axis marine current turbines. <em>The 29th International Ocean and Polar Engineering Conference (ISOPE 19)</em>. OnePetro.</p>
 				<p></p
 
             </div>
