--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Inter:700' rel='stylesheet' type='text/css'>
 </head>
-<body>
+<body style="background-color:#e8f4f8">
 
 
 <!-- Navigation -->
-    <nav class="navbar navbar-inverse style="margin-left: 100px;"">
+    <nav class="navbar navbar-inverse style="margin-left: 100px; color:003262"">
       <div class="container">
 		<ul class="nav navbar-nav">
               <li><a href="#">Home</a></li>
