--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
 <!-- Navigation -->
-    <nav class="navbar navbar-inverse style="margin-left: 100px; color:003262"">
+    <nav class="navbar navbar-inverse style="margin-left: 100px; color:navy"">
       <div class="container">
 		<ul class="nav navbar-nav">
               <li><a href="#">Home</a></li>
