--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Inter:700' rel='stylesheet' type='text/css'>
 </head>
-<body style="background-color:#e8f4f8">
+<body style="background-color:#F5F4EF">
 
 
 <!-- Navigation -->
-    <nav class="navbar navbar-inverse style="margin-left: 100px; color:navy"">
+    <nav class="navbar navbar-light style="margin-left: 100px;background-color: #e3f2fd;"">
       <div class="container">
 		<ul class="nav navbar-nav">
               <li><a href="#">Home</a></li>
@@ -46,10 +46,10 @@
                 <div class="col" style="margin-top:3%; text-align:justify;">                
 					<p>Hi!</p>
                     <p>
-					I'm a Ph.D Candidate at UC Berkeley studying the application of machine learning models in performance-based design in structural engineering, particularly in base isolated structures. I'm currently finishing my Ph.D program, advised by Prof. Tracy Becker, with a <a href=https://github.com/hgp297/isol-sys-database/>project</a> that focuses on using Gaussian process to enable inverse design of isolated steel frames to achieve resiliency targets. 
+					I'm a Ph.D Candidate at UC Berkeley studying the application of machine learning models in performance-based design in structural engineering, particularly in base isolated structures. I am interested in the application of ML methods and data-driven methods to complement disaster decision making, especially on the regional scale. Particularly, this includes <b>regional resiliency prediction</b>and <b>optimization in disaster damage mitigation and response</b>. I am also hoping to further explore fairness criteria in risk predictions as well as innovative earthquake protective technologies in the future.
                     </p>
                    <p> 
-                   I am interested in the application of ML methods and data-driven methods to complement disaster decision making, especially on the regional scale. Particularly, this includes <b>regional resiliency prediction</b>, <b>fairness criteria in risk prediction models</b>, and optimization in disaster damage mitigation or response strategies. My Ph.D work was funded by the NSF Graduate Research Fellowship, along with UC Berkeley's Graduate Fellowship.
+                   I'm currently finishing my Ph.D program (expected December 2024), advised by Prof. Tracy Becker, with a <a href=https://github.com/hgp297/isol-sys-database/>project</a> that focuses on using Gaussian process to enable inverse design of isolated steel frames to achieve resiliency targets. My Ph.D work is funded by the NSF Graduate Research Fellowship, along with UC Berkeley's Graduate Fellowship.
                    </p>
 				   <p>
 				   Prior to this, I did my undergrad at UT Austin, where I worked on design and testing of optimized ducted marine turbine with the Ocean Engineering Group under Dr. Spyros Kinnas. I also greatly enjoy teaching and STEM outreach. I have been a teaching assistant for 3 semesters and have done high school outreach with Cal's Earthquake Engineering Research Institute under the <a href=https://www.eeri.org/schools>SESI</a> program for three years.
@@ -93,7 +93,7 @@
     </div>
     
     <!-- Other people may like it too! -->
-    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">The template is by Vasilios Mavroudis. Thanks!</a> 
+    <a style="color:#b5bec9;font-size:0.8em; float:right;" href="https://github.com/mavroudisv/plain-academic">This page uses the plain-academic template by Vasilios Mavroudis.</a> 
     
 </body>
 
