--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <div> <p>Email: hgp at berkeley dot edu<br> </div>
                 <div> <p> <a href=""https://scholar.google.com/citations?user=ctDTlKsAAAAJ&hl=en&oi=sra>google scholar</a><br> </div>
                 <div> <p> <a href="https://github.com/hgp297">github repo</a><br> </div>
+		<div> <p> <a href="https://www.linkedin.com/in/huy-pham-523834311/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BWHdfc%2F00T6qtyLnay79iRw%3D%3D">linkedin</a><br> </div>    
             </div>
             <!-- Entries Column -->
             <div class="col-md-8 col-xs-12">
