--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				   Prior to this, I did my undergrad at UT Austin, where I worked on design and testing of optimized ducted marine turbine with the Ocean Engineering Group under Dr. Spyros Kinnas. I also greatly enjoy teaching and STEM outreach. I have been a teaching assistant for 3 semesters and have done high school outreach with Cal's Earthquake Engineering Research Institute under the <a href=https://www.eeri.org/schools>SESI</a> program for three years.
 				   </p>
 				   <p>
-				   Outside of research work, I enjoy board games, hiking, tennis, and learning languages.
+				   Outside of research work, I enjoy <a href=https://boardgamegeek.com/collection/user/bro_my_account?subtype=boardgame&ff=1>board games</a>, <a href=https://www.alltrails.com/members/h-p-310?ref=header>hiking</a>, <a href=https://letterboxd.com/pasta_italiano/>movies</a>, tennis, and learning languages.
 				   </p>
                 </div> 
                 <div class="row">
