--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </div> 
             <div class="col">    
                 <h2 id="publications">Publications</h2>
-				<p><strong>H. G. Pham</strong>, and T. C. Becker (2024). Design of Isolated Building to Achieve Targeted Collapse Limits through Gaussian Process Modeling. <em>Engineering Structures</em>. [in review]</p>
+				<p><strong>H. G. Pham</strong>, and T. C. Becker (2025). Design of Isolated Building to Achieve Targeted Collapse Limits through Gaussian Process Modeling. <em>Engineering Structures</em>. p>
 				<p></p>
 				<p><strong>H. Pham</strong>, and T. Becker (2024). Decision Variable-based Inverse Design of Isolated Steel Frames using Gaussian Process Regression. <em>Engineering Mechanics Institute Conference and Probabilistic Mechanics & Reliability Conference (EMI/PMC 2024)</em>. Chicago, Illinois, USA.</p>
                 <p>
