--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div> <p>(he/him)<br> </div>
                 <div class="row"> <div class="col-md-10 col-xs-4"> <img class="img-responsive" src="assets/img/avatar.jpg" alt=""></div></div><br>
 		<div> <p>Email: huy dot pham at civil dot ubc dot ca<br> </div>
-                <div> <p>Email (until June '25): hgp at berkeley dot edu<br> </div>
+                <div> <p>Email:  hgp at berkeley dot edu<br> </div>
                 <div> <p> <a href=""https://scholar.google.com/citations?user=ctDTlKsAAAAJ&hl=en&oi=sra>google scholar</a><br> </div>
                 <div> <p> <a href="https://github.com/hgp297">github repo</a><br> </div>
 		<div> <p> <a href="https://www.linkedin.com/in/huy-pham-523834311/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BWHdfc%2F00T6qtyLnay79iRw%3D%3D">linkedin</a><br> </div>    
@@ -48,10 +48,10 @@
                 <div class="col" style="margin-top:3%; text-align:justify;">                
 					<p>Hi!</p>
                     <p>
-					I'm a postdoctoral researcher at UC Berkeley studying the application of machine learning models in performance-based design in structural engineering, particularly in base isolated structures. I'm joining the University of British Columbia in the upcoming June, where I will be working on the functional recovery prequalification for building systems. I am interested in the application of ML methods and data-driven methods to complement disaster decision making, especially on the regional scale. Particularly, this includes <b>regional resiliency prediction</b> and <b>optimization in disaster damage mitigation and response</b>. I am also hoping to further explore fairness criteria in risk predictions as well as innovative earthquake protective technologies in the future.
+					I'm a postdoctoral researcher at the University of British Columbia, working on the functional recovery prequalification for building systems. I previously studied the application of machine learning models to performance-based earthquake engineering, particularly in base isolated structures. I am interested in the application of ML methods and data-driven methods to complement disaster decision making at system-level and regional scales. Particularly, this includes <b>regional resiliency prediction</b> and <b>optimization in disaster damage mitigation and response</b>. I am also hoping to further explore fairness criteria in risk predictions as well as innovative earthquake protective technologies in the future.
                     </p>
                    <p> 
-                   I recently finished my Ph.D in December 2024, advised by Prof. Tracy Becker, with a <a href=https://github.com/hgp297/isol-sys-database/>project</a> that focuses on using Gaussian process to enable inverse design of isolated steel frames to achieve resiliency targets. My Ph.D work is funded by the NSF Graduate Research Fellowship, along with UC Berkeley's Graduate Fellowship.
+                   I recently finished my Ph.D at UC Berkeley in December 2024, advised by Prof. Tracy Becker, with a <a href=https://github.com/hgp297/isol-sys-database/>project</a> that focuses on using Gaussian process to enable inverse design of isolated steel frames to achieve resiliency targets. My Ph.D work is funded by the NSF Graduate Research Fellowship, along with UC Berkeley's Graduate Fellowship.
                    </p>
 				   <p>
 				   Prior to this, I did my undergrad at UT Austin, where I worked on design and testing of optimized ducted marine turbine with the Ocean Engineering Group under Dr. Spyros Kinnas. I also greatly enjoy teaching and STEM outreach. I have been a teaching assistant for 3 semesters and have done high school outreach with Cal's Earthquake Engineering Research Institute under the <a href=https://www.eeri.org/schools>SESI</a> program for three years.
